@@ -18,7 +18,7 @@
 # -----------------------------------------------------------------------------------------------
 
 #
-#  WARNING: Hitachi Vantara Report Designer needs JDK 1.7 or newer to run.
+#  WARNING: Hitachi Vantara Report Designer needs JDK 11 or newer to run.
 #
 
 DIR=$( cd "$( dirname "$0" )" && pwd )
@@ -26,8 +26,14 @@ DIR=$( cd "$( dirname "$0" )" && pwd )
 . "$DIR/set-pentaho-env.sh"
 setPentahoEnv
 
+JAVA_LOCALE_COMPAT=
+if $($_PENTAHO_JAVA -version 2>&1 | grep "version \"11\..*" > /dev/null )
+then
+  JAVA_LOCALE_COMPAT="-Djava.locale.providers=COMPAT,SPI"
+fi
+
 if [[ "$OSTYPE" == "darwin"* ]]; then 
-	"$_PENTAHO_JAVA" -Xms1024m -Xmx2048m -Dapple.laf.useScreenMenuBar=true -jar "$DIR/launcher.jar" $@
+	"$_PENTAHO_JAVA" -Xms1024m -Xmx2048m -Dapple.laf.useScreenMenuBar=true $JAVA_LOCALE_COMPAT -jar "$DIR/launcher.jar" $@
 else
-	"$_PENTAHO_JAVA" -Xms1024m -Xmx2048m -jar "$DIR/launcher.jar" $@
+	"$_PENTAHO_JAVA" -Xms1024m -Xmx2048m $JAVA_LOCALE_COMPAT -jar "$DIR/launcher.jar" $@
 fi
